2008-07-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_buttonpress): Zooming uses mouse button 3.
	Do not disable it just because we are using buttons 1 or 2 for something
	else.

2008-07-21  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_vector): Work around a bug in ghostscript/gv.
	If there is a long string of mixed relative/absolute lines without a
	stroke command, ghostscript renders it veeeery slowly.  We already 
	limit the number of relative moves in a row; this patch adds a "stroke".
	Bug #2021942

	* src/graphics.c (plot_vectors) src/plot2d.c (get_data):
	Allow 2D vector plots to draw color from an extra data column.

2008-07-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (check_for_variable_color):  Consolidate all the checks
	for deriving color from a data column into a single subroutine.

	* src/plot2d.c (eval_plots get_data) docs/gnuplot.doc:
	Allow palette colors in 2D plots.

2008-07-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_plot) src/graph3d.c (do_3dplot): Move palette
	initialization earlier, so that no objects or axes are drawn before the
	palette is defined.
	Bug #2019453

2008-07-15  Christian Hilgers  <hilgers@muc.zae-bayern.de>

	* src/plot2d.c src/graphics.c docs/gnuplot.doc: Make stacked histograms
	grow upward from positive data and downward from negative data.
	Also adjust and fix autoscaling of stacked histograms.
	This is a minor change in auto-layout of stacked histograms.

2008-07-15  Timothee Lecomte  <timothee.lecomte@ens.fr>
	
	* src/wxterminal/wxt_gui.h:
	* src/wxterminal/wxt_gui.cpp (LoadCursor):
	* src/wxterminal/bitmaps/xpm/cross.xpm:
	* src/wxterminal/bitmaps/xpm/icon16x16.xpm:
	* src/wxterminal/bitmaps/xpm/icon32x32.xpm:
	* src/wxterminal/bitmaps/xpm/icon64x64.xpm:
	* src/wxterminal/bitmaps/xpm/notfound.xpm:
	* src/wxterminal/bitmaps/xpm/right.xpm:
	* src/wxterminal/bitmaps/xpm/rotate.xpm:
	* src/wxterminal/bitmaps/xpm/size.xpm: