@@ -5,6 +5,7 @@ New features, changes and fixes since previous release
 * NEW "undefine foo" clears previously defined user variable foo
 * NEW allow contouring of pm3d surfaces
 * NEW allow color by z value ("palette z") in 2D plots
+* NEW "pause mouse close" waits until the plot window is closed
 * CHANGE try harder to autotitle columns in using specs with expressions
 * CHANGE gd.trm: use dynamically-allocated TTF font names
 * CHANGE x11: more finely sampled color palette for PM3D
